@@ -1,3 +1,9 @@
+2009-11-06  Jan Kratochvil  <jan.kratochvil@redhat.com>
+	    Joel Brobecker  <brobecker@adacore.com>
+	    Paolo Bonzini  <bonzini@gnu.org>
+
+	* largefile.m4: New file.
+
 2009-09-09  Paolo Bonzini  <bonzini@gnu.org>
 
 	* stdint.m4 (GCC_HEADER_STDINT): Revert changes to this macro in
